# electrico

./: .gitignore  Cargo.toml  README.md  Resources.json  ResourcesLink.json
Resources/: app.html  main.js  package.json  preload.js  styles.css  terminal.js
src/: backend.rs  common.rs  frontend.rs  ipcchannel.rs  main.rs  types.rs
src/electron/: electron.rs  menu.rs  mod.rs  types.rs
src/electron/apis/: apis.rs  dialog.rs  mod.rs  types.rs
src/js/backend/: backend.html  electrico.js  electron.js  node.js  package-lock.json  package.json
src/js/backend/addons/: addons.js  pty.js  spdlog.js  sqlite.js
src/js/backend/electron/: electron.js
src/js/backend/electron/apis/: apis.js  dialog.js  safeStorage.js
src/js/backend/node/: node.js
src/js/backend/node/addons/: addons.js  pty.js  sqlite.js
src/js/backend/node/apis/: apis.js  child_process.js  crypto.js  fs.js  http.js  net.js  node-fetch.js  perf_hooks.js  stream.js  undici.js
src/js/frontend/: electrico.js  package-lock.json  package.json  quirks.js
src/js/shared/: require.js  shared.js
src/node/: common.rs  ipc.rs  mod.rs  node.rs  process.rs  types.rs
src/node/addons/: addons.rs  mod.rs  pty.rs  spdlog.rs  sqlite.rs  types.rs
src/node/apis/: apis.rs  child_process.rs  fs.rs  http.rs  ipc.rs  mod.rs  net.rs  process.rs  types.rs
