[package]
name = "electrico"
version = "0.7.0"
edition = "2021"
authors = ["Thomas Tschurtschenthaler"]
license = "MIT OR Apache-2.0"
description = "Lightweight Electron 'compatible' App Container."

[package.metadata.bundle.ttschurtschenthaler.electrico]
name = "Electrico"
identifier = "com.ttschurtschenthaler.electrico"
version = "1.0.0"
copyright = "Copyright (c) Thomas Tschurtschenthaler 2024. All rights reserved."
category = "App"
short_description = "Lightweight Electron 'compatible' App Container."
long_description = """
"""

[dependencies]
log = {version = "0.4.25"}
env_logger = {version = "0.11.6"}
include_dir = {version = "0.7.3"}
wry = { version = "0.48.1", features = ["linux-body"]}
tao = { version = "0.31.1"}
muda = {version = "0.15.0"}
serde_json = { version = "1.0.138"}
json_comments = {version = "0.2.2"}
serde = {version = "1.0.217"}
rfd = {version="0.15.2"}
tokio = {version = "1.43.0", features = ["full"]}
tokio-util = {version = "0.7.13"}
reqwest = {version = "0.12.12"}
substring = {version = "1.4.5"}
open = {version = "5.3.2"}
mime_guess = {version = "2.0.5"}
lazy_static = {version = "1.5.0"}
base64 = {version = "0.22.1"}
directories = {version = "6.0.0"}
notify = {version = "8.0.0"}
interprocess = {version = "2.2.2", features = ["tokio"]}
uuid = { version = "1.13.1", features = ["v4"]}
urlencoding = {version = "2.1.3"}
queues = {version = "1.1.0"}
symlink = {version = "0.1.0"}
rusqlite = {version = "0.33.0", features = ["serialize"]}
clap = { version = "4.5.29", features = ["derive"] }
tempfile = {version = "3.16.0"}
spdlog-rs = {version = "0.4.1"}
portable-pty = {version = "0.9.0"}
hyper = {version = "1.6.0", features = ["full"] }
hyper-util = {version = "0.1.10", features = ["full"]}
http-body-util = {version = "0.1.2"}
futures-util = {version = "0.3.31", features = ["io"]}
bytes = {version = "1.10.0"}
fastwebsockets = {version = "0.10.0", features = ["upgrade"]}

[target."cfg(any(target_os = \"linux\", target_os = \"dragonfly\", target_os = \"freebsd\", target_os = \"openbsd\", target_os = \"netbsd\"))".dependencies]
webkit2gtk = { version = "=2.0.1", features = [ "v2_40" ]}
openssl = { version = "0.10", features = ["vendored"] }
